--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "azure-search": "0.0.17",
     "botbuilder": "^3.11.0",
     "dot-env": "0.0.1",
     "restify": "^6.0.1"
